Attemps.txt
							// Attempt 1 
							/*
							if ([BatteryColor colourWithString:@"#000000"] || [BatteryColor colourWithString:@"#FFFFFF"]){
  									fill.backgroundColor = [UIColor labelColor];
								}else{
  									fill.backgroundColor = BatteryColor;
								} 
								*/
								/*
												PXL_Battery.xm:190:27: error: 'UIColor' may not respond to 'isEqualToString:' [-Werror]
													if ([BatteryColor colourWithString:@"#000000"] || ([BatteryColor colourWithString:@"#FFFFFF"]) {
                                                                     ~~~~~~~~~~~~ ^										~~~~~~~~~~~~ ^
																	 */
							/* Attempt 2 
								if ([BatteryColor isEqualToString:@"#000000"]) {
  									fill.backgroundColor = [UIColor labelColor];
									} else if ([BatteryColor isEqualToString:@"#FFFFFF"]) {
  										fill.backgroundColor = [UIColor labelColor];
											} else {
 											 fill.backgroundColor = BatteryColor;
												}
												/*
												PXL_Battery.xm:190:27: error: 'UIColor' may not respond to 'isEqualToString:' [-Werror]
                                                                if ([BatteryColor isEqualToString:@"#000000"]) {
                                                                     ~~~~~~~~~~~~ ^
												PXL_Battery.xm:192:35: error: 'UIColor' may not respond to 'isEqualToString:' [-Werror]
                                                                        } else if ([BatteryColor isEqualToString:@"#FFFFFF"]) {
												*/
							/* Attempt 3 -Fail 
							// Try description returns string with color space and values (and alpha)
										if ([[BatteryColor description] isEqualToString:@"#FFFFFF:1.00"] || [[BatteryColor description] isEqualToString:@"#000000:1.00"]) {
 											fill.backgroundColor = [UIColor labelColor];
												}else{
  													fill.backgroundColor = BatteryColor;
														}
													I need to read plist	*/
													/* Attempt 4 
														// Read key from plist no idea why not working
															//if ([NSString Color(@"BatteryColor") isEqualToString:@"#FFFFFF:1.00"]) /* Handle black color */ // You never see this shit code
															//fill.backgroundColor = [UIColor labelColor]; }else{ fill.backgroundColor = BatteryColor; } */
																/* Attempt 5 (Now i know how to do it right way i remembered Randy taught that). 
															//NSString *batteryColor = [settings objectForKey:@"BatteryColor"];
																// This is the way now use it in if else  
																	if ([BatteryColor isEqualToString:@"#FFFFFF:1.00"]){ 
																		else if ([[BatteryColor objectForKey:@"BatteryColor"] isEqualToString:@"#000000:1.00"]){
    																	fill.backgroundColor = [UIColor labelColor];
																		}else 
																		fill.backgroundColor = BatteryColor;
																	}*/
                                                                    /*
																	if ([batteryColor colourWithHexString:@"#FFFFFF:1.00"]) {
																			fill.backgroundColor = [UIColor labelColor];
																		}else{
																			if ([batteryColor isEqualToString:@"#000000:1.00"]) {
																				fill.backgroundColor = [UIColor labelColor];
																			} else {
																				fill.backgroundColor = BatteryColor;
																			}
																		}
*/
Other Attempts deleted by my cat, while rewriting Colors part.
I Know i tried same thing repeatedly i tryin to learn what methods valid and whats not.
switch case can be used here not sure/need to learn more about it.